// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-webhook should handle non-existent webhook 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The webhook could not be found","status":404}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`update-webhook should update a webhook 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
